--- a/myapp/foodapp/src/Components/Nav.css
+++ b/myapp/foodapp/src/Components/Nav.css
@@ -6,7 +6,7 @@ nav {
     align-items: center;
     justify-content: center;
     height: 50px;
-    background-color: #1d1f27;
+    background-color: #1d41d1;
     padding: 0 20px;
     position: fixed;
     top: 0;
